# hista

./: CMakeLists.txt  README.md
assets/images/: platforms.hista
assets/meta/animations/: mario.hista  slime.hista
assets/meta/enemy/: slime.hista
assets/meta/level/: 1.hista  2.hista
assets/meta/mario/: mario.hista
assets/meta/tilemap/: donkey.hista  donkey2.hista
assets/meta/tileset/: donkey.hista
assets/tilemaps/: level1.tilemap
src/: game.cpp  game.h  key_binding.cpp  key_binding.h  level.cpp  level.h  main.cpp  state.cpp  state.h  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
src/behavior/: Movable.h  movable.h
src/ennemi/: actions.h  actions_enemy.h  context.h  context_enemy.h  displayer.cpp  displayer.h  displayer_enemy.cpp  displayer_enemy.h
src/entity/: animation.cpp  animation.h  enemy.cpp  enemy.h  entity.h  mario.cpp  mario.h
src/gui/: button.cpp  button.h  component.cpp  component.h  container.cpp  container.h  label.cpp  label.h
src/player/: actions.h  context.cpp  context.h  displayer.cpp  displayer.h  player.cpp  player.h  playerUpdater.cpp  playerUpdater.h  player_updater.cpp  player_updater.h
src/resource/: holder.h  holder.inl  identifier.h
src/state/: base.cpp  base.h  context.cpp  context.h  defeat.cpp  defeat.h  game.cpp  game.h  identifier.h  level1.cpp  level1.h  level2.cpp  level2.h  menu.cpp  menu.h  stack.cpp  stack.h  victory.cpp  victory.h
